--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,7 @@
 <footer class="footer-main">
-    {{ site.title }} © {{ site.time | date: '%Y' }}
-
-    <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
-        <i class="fa-solid fa-rss"></i>
-    </a>
-
     <p class="extra">
+        Modified
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
-        by
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
+        made by me
     </p>
 </footer>
