--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -18,15 +18,16 @@
             opacity: .8
 
     > .title
-        font-size: 4rem
+        font-size: 5rem
         margin: 0 0 13px
 
     > .description
-        font-size: 1.85rem
+        font-size: 2.1rem
         font-weight: $thin-font
         font-style: normal
+        line-height: 30px
         color: $gama
-        width: 70%
+        width: 90%
         margin: 0 auto 30px
 
         // if you put some links in your bio. ;)
